--- a/src/ex10_html-css-fundamentals-part2/task-03-1.css
+++ b/src/ex10_html-css-fundamentals-part2/task-03-1.css
@@ -2,18 +2,18 @@
     box-sizing: border-box;
 }
 
-.table-header {
+#table-header {
     text-transform: uppercase;
-    font-family: 'Courier New', Courier, monospace;
+    font-size: 0.7em;
+    background-color: #e3eaf3;
 }
 
-#table-employees {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #5c81a5;
+.table-employees {
+    color: #798ba1;
 }
 
 tr {
-    background-color: #d8e8f7;
+    background-color: #f2f6fa;
 }
 
 td, th {
