--- a/src/ex9_html-css-fundamentals-part1/task-grid.css
+++ b/src/ex9_html-css-fundamentals-part1/task-grid.css
@@ -5,7 +5,7 @@ body {
 main {
     display: grid;
     grid-template-columns: 75% 25%;
-    grid-template-rows: 111px 367px 1fr;
+    grid-template-rows: fit-content(111px) fit-content(367px) 1fr;
 }
 
 header {
@@ -18,12 +18,14 @@ header {
 
 section {
     background: lightgreen;
-    grid-area: 2/1/2/2;
+    width: 100%;
 }
 
 article {
     background: white;
     margin: 0 0 1rem 0;
+    grid-area: 2/1/2/1;
+    grid-area: 3/2/3/2;
 }
 
 aside {
