--- a/src/kanban/task-01.css
+++ b/src/kanban/task-01.css
@@ -22,14 +22,6 @@ body {
     height: 100vh;
 }
 
-.left-side, .info-tasks {
-    margin-left: 13px;
-}
-
-.right-side, .info-kanban {
-    margin-right: 3px;
-}
-
 header {
     padding: 5px;
 }
@@ -40,8 +32,45 @@ footer, header {
 }
 
 footer {
-    color: #fff;
+    color: #FFFFFF;
     padding: 17px;
+}
+
+main {
+    background-color: #0079BF;
+    height: 84%;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    overflow: auto;
+    padding: 20px;
+}
+
+h1 {
+    color: #FFFFFF;
+    font-size: 28px;
+    margin-left: 5px;
+}
+
+button {
+    padding: 0px;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+span.signature {
+    text-transform: uppercase;
+}
+
+.left-side, .info-tasks {
+    margin-left: 13px;
+}
+
+.right-side, .info-kanban {
+    margin-right: 3px;
 }
 
 .task-settings {
@@ -76,10 +105,6 @@ footer {
     color: #5E6C84;
 }
 
-span {
-    text-transform: uppercase;
-}
-
 .info-tasks {
     display: flex;
     justify-content: space-around;
@@ -95,39 +120,14 @@ span {
     padding: 7px;
 }
 
-main {
-    background-color: #0079BF;
-    height: 84%;
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    overflow: auto;
-    padding: 20px;
-}
-
-h1 {
-    color: #fff;
-    font-size: 28px;
-    margin-left: 5px;
-}
-
-button {
-    padding: 0px;
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-    cursor: pointer;
-}
-
 .button-add {
     display: flex;
     justify-content: center;
     width: 181px;
     height: 33px;
     border-radius: 5px;
-    background-color: #fff;
-    margin-right: 46.8px;
+    background-color: #FFFFFF;
+    margin-right: 47px;
 }
 
 .img-button-add {
@@ -140,10 +140,10 @@ button {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background-color: #fff;
+    background-color: #FFFFFF;
     border-radius: 50%;
-    width: 38.4px;
-    height: 38.4px;
+    width: 38px;
+    height: 38px;
 }
 
 .button-profile {
@@ -151,12 +151,12 @@ button {
     justify-content: space-between;
     align-items: center;
     width: 58px;
-    height: 38.4px;
+    height: 38px;
 }
 
 .img-button-profile {
-    width: 26.2px;
-    height: 33.45px;
+    width: 26px;
+    height: 33px;
 }
 
 .logo {
@@ -168,31 +168,31 @@ button {
 
 .top-line-logo, .center-line-logo, .bottom-line-logo {
     position: absolute;
-    width: 19.69px;
-    height: 1.41px;
-    background-color: white;
-    left: 17.58px;
+    width: 20px;
+    height: 2px;
+    background-color: #FFFFFF;
+    left: 18px;
 }
 
 .top-line-logo {
-    top: 11.6px;
+    top: 12px;
 }
 
 .center-line-logo {
-    top: 21.8px;
+    top: 22px;
 }
 
 .bottom-line-logo {
-    top: 31.99px;
+    top: 34px;
 }
 
 .top-line-logo::before, .center-line-logo::before, .bottom-line-logo::before {
     content: "";
     position: absolute;
-    width: 3.03px;
-    height: 3.03px;
+    width: 3px;
+    height: 3px;
     border-radius: 50%;
-    border: 2px solid #fff;
+    border: 2px solid #FFFFFF;
     left: -10px;
     top: -3px;
 }
